Bug 320891 - Missing space in “Face Tags(including face rectangles)”
Summary: Missing space in “Face Tags(including face rectangles)”
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 3.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-08 11:48 UTC by Adrián Chaves (Gallaecio)
Modified: 2017-08-15 21:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrián Chaves (Gallaecio) 2013-06-08 11:48:40 UTC
I saw this string in digikam.po (trunk): “Face Tags(including face rectangles)”

It should be: “Face Tags (including face rectangles)”



Reproducible: Always
Comment 1 caulier.gilles 2013-06-08 12:06:11 UTC
Adrian,

as you have a developer account, just search this string in digiKam and fix it yourself. No need to open a report in bugzilla (:=)))

Gilles Caulier
Comment 2 Adrián Chaves (Gallaecio) 2013-06-08 12:09:56 UTC
Ups, I didn’t even though about that. Sorry!
Comment 3 Adrián Chaves (Gallaecio) 2013-06-08 12:14:30 UTC
Git commit d67f70afafa6224397cc7c8854e46fb674d47c63 by Adrián Chaves Fernández (Gallaecio).
Committed on 08/06/2013 at 14:14.
Pushed by adrianchavesfernandez into branch 'master'.

Added a missing space to a string.
GUI:

M  +1    -1    utilities/setup/setupmetadata.cpp

http://commits.kde.org/digikam/d67f70afafa6224397cc7c8854e46fb674d47c63