Added a missing space to a string.

BUG: 320891
GUI: